# wanxiang

./: .gitignore  IMMUTABLE_CORE.md  ProjectGuide.md  README.md  agentforge-ui.jsx  pyproject.toml  wanxiang-ui.jsx
.githooks/: pre-commit
agentforge/agentforge/: __init__.py  cli.py
agentforge/tests/: test_agent_tools.py  test_builtin_tools.py  test_factory.py  test_llm_client_modes.py  test_mcp_status.py  test_message.py  test_pipeline.py  test_runner_tool_events.py  test_server_events.py  test_tools.py
agentforge/wanxiang/: __init__.py  cli.py
configs/: mcp.yaml.example  seed_tasks.yaml
configs/agents/: skill_synthesizer.yaml
tests/: _e2e_mcp_filesystem.py  test_agent_tools.py  test_autoschool.py  test_builtin_tools.py  test_conversation.py  test_curriculum.py  test_factory.py  test_gap_detector.py  test_grader.py  test_graduation.py  test_growth_budget.py  test_immutable_core.py  test_llm_client_modes.py  test_llm_usage_recorder.py  test_mcp_bridge.py  test_mcp_client.py  test_mcp_loader.py  test_mcp_status.py  test_outcome_tagger.py  test_phase1_pilot.py  test_pipeline.py  test_probe_bypass.py  test_project.py  test_retag_untagged.py  test_runner_storage_integration.py  test_runner_tool_events.py  test_sandbox.py  test_seed_loader.py  test_server_events.py  test_skill_forge.py  test_skill_loader.py  test_storage.py  test_tier.py  test_tier_integration.py  test_tools.py  test_trace_mining.py  test_trace_mining_endpoint.py  test_workspace.py
wanxiang/core/: __init__.py  agent.py  autoschool.py  builtin_tools.py  conversation.py  curriculum.py  factory.py  (+22 more)
(+23 files in other folders)
