[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wanxiang"
version = "0.1.0"
description = "万象 — AI-native multi-agent orchestration engine with Director-planned teams and pipeline/review_loop/parallel workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "yeyanle6", email = "163436251+yeyanle6@users.noreply.github.com" },
]
keywords = ["agents", "multi-agent", "orchestration", "anthropic", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
wanxiang = "wanxiang.cli:main"
wanxiang-server = "wanxiang.server.app:main"

[project.urls]
Repository = "https://github.com/yeyanle6/wanxiang"
Issues = "https://github.com/yeyanle6/wanxiang/issues"

[tool.hatch.build.targets.wheel]
packages = ["wanxiang"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
